force-app/main/default/objects/Contact/fields/AbacusDefaultTimeType__c.field-meta.xml
<CustomField>
    <fullName>AbacusDefaultTimeType__c</fullName>
    <label>Abacus Default Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>200</fullName>
                <default>true</default>
                <label>200</label>
            </value>
            <value>
                <fullName>1100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>