force-app/main/default/objects/Contact/fields/AbacusVisaNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusVisaNr__c</fullName>
    <inlineHelpText>Data entered by Finance.</inlineHelpText>
    <label>Abacus Visa Nr.</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>