force-app/main/default/objects/Contact/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <formula>Account.AccountManager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>