force-app/main/default/objects/Contact/fields/AccountOwnerName__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerName__c</fullName>
    <formula>Account.Owner.FirstName &amp;&quot; &quot; &amp;  Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>