force-app/main/default/objects/Contact/fields/ActionEdit__c.field-meta.xml
<CustomField>
    <fullName>ActionEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Edit</label>
    <type>Checkbox</type>
</CustomField>