force-app/main/default/objects/Contact/fields/ContactNr__c.field-meta.xml
<CustomField>
    <fullName>ContactNr__c</fullName>
    <displayFormat>CN-{000000}</displayFormat>
    <label>Contact Nr.</label>
    <type>AutoNumber</type>
</CustomField>