force-app/main/default/objects/Contact/fields/ContactOwnerSignatureFileName__c.field-meta.xml
<CustomField>
    <fullName>ContactOwnerSignatureFileName__c</fullName>
    <formula>Owner.FirstName &amp; Owner.LastName&amp;&quot;.jpg&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Signature File Name</label>
    <type>Text</type>
</CustomField>