force-app/main/default/objects/Contact/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>