force-app/main/default/objects/Contact/fields/DateMailingFlagTrue__c.field-meta.xml
<CustomField>
    <fullName>DateMailingFlagTrue__c</fullName>
    <label>Date Mailing Flag True</label>
    <type>Date</type>
</CustomField>