force-app/main/default/objects/Contact/fields/EmailSupplierCostsFromAbacus__c.field-meta.xml
<CustomField>
    <fullName>EmailSupplierCostsFromAbacus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email: Supplier Costs from Abacus</label>
    <type>Checkbox</type>
</CustomField>