force-app/main/default/objects/Contact/fields/EmergencyContact__c.field-meta.xml
<CustomField>
    <fullName>EmergencyContact__c</fullName>
    <label>Emergency Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>