force-app/main/default/objects/Contact/fields/EmergencyContactPhone__c.field-meta.xml
<CustomField>
    <fullName>EmergencyContactPhone__c</fullName>
    <label>Emergency Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>