force-app/main/default/objects/Contact/fields/EmployeeCosts__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCosts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Costs</label>
    <referenceTo>EmployeeCosts__c</referenceTo>
    <relationshipLabel>Internal Contacts</relationshipLabel>
    <relationshipName>InternalContacts</relationshipName>
    <type>Lookup</type>
</CustomField>