force-app/main/default/objects/Contact/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <label>Facebook</label>
    <length>80</length>
    <type>Text</type>
</CustomField>