force-app/main/default/objects/Contact/fields/InternalPhone__c.field-meta.xml
<CustomField>
    <fullName>InternalPhone__c</fullName>
    <label>Internal Phone</label>
    <type>Phone</type>
</CustomField>