force-app/main/default/objects/Contact/fields/JobSituation__c.field-meta.xml
<CustomField>
    <fullName>JobSituation__c</fullName>
    <label>Job Situation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>