force-app/main/default/objects/Contact/fields/LastTimeEntryDate__c.field-meta.xml
<CustomField>
    <fullName>LastTimeEntryDate__c</fullName>
    <inlineHelpText>Last Work Time Entry</inlineHelpText>
    <label>Last Time Entry (Date)</label>
    <type>Date</type>
</CustomField>