force-app/main/default/objects/Contact/fields/LeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceDetail__c</fullName>
    <label>Lead Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>