force-app/main/default/objects/Contact/fields/LocalCurrency__c.field-meta.xml
<CustomField>
    <fullName>LocalCurrency__c</fullName>
    <formula>CASE( LocationCountry__c , &quot;SWITZERLAND&quot;,&quot;CHF&quot;,&quot;UNITED STATES&quot;,&quot;USD&quot;,&quot;EUR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Currency</label>
    <type>Text</type>
</CustomField>