force-app/main/default/objects/Contact/fields/LocationZip__c.field-meta.xml
<CustomField>
    <fullName>LocationZip__c</fullName>
    <label>Location ZIP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>