force-app/main/default/objects/Contact/fields/Mailing__c.field-meta.xml
<CustomField>
    <fullName>Mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Important Contacts for Mailings.
14.03.2017, ary: Dieses Feld wird nicht mehr gebraucht, durch Kampagnen ersetzt</description>
    <label>Mailing</label>
    <type>Checkbox</type>
</CustomField>