force-app/main/default/objects/Contact/fields/MobilePaymentAgreement__c.field-meta.xml
<CustomField>
    <fullName>MobilePaymentAgreement__c</fullName>
    <label>Mobile Payment Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Probation Period 80.-</fullName>
            </value>
            <value>
                <fullName>Flat Rate 80.-</fullName>
            </value>
            <value>
                <fullName>Contract 100.-</fullName>
            </value>
            <value>
                <fullName>Contract 200.-</fullName>
            </value>
            <value>
                <fullName>Contract 300.-</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>