force-app/main/default/objects/Contact/fields/MobilePaymentByWorkload__c.field-meta.xml
<CustomField>
    <fullName>MobilePaymentByWorkload__c</fullName>
    <formula>IF(
(ISPICKVAL(MobilePaymentAgreement__c, &quot;Flat Rate 80.-&quot;)), 
(80* TimetrackerWorkload__c ),
(IF(
(ISPICKVAL(MobilePaymentAgreement__c, &quot;Contract 100.-&quot;)), 
(MAX(100*TimetrackerWorkload__c,94)),
(IF(
(ISPICKVAL(MobilePaymentAgreement__c, &quot;Contract 200.-&quot;)), 
(MAX(200*TimetrackerWorkload__c,94)),
(IF(
(ISPICKVAL(MobilePaymentAgreement__c, &quot;Contract 300.-&quot;)), 
(MAX(300*TimetrackerWorkload__c,94)),0
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Payment by Workload</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>