force-app/main/default/objects/Contact/fields/MobilePaymentValidFromDate__c.field-meta.xml
<CustomField>
    <fullName>MobilePaymentValidFromDate__c</fullName>
    <label>Mobile Payment Valid from Date</label>
    <type>Date</type>
</CustomField>