force-app/main/default/objects/Contact/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <formula>Account.Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Network</label>
    <type>Text</type>
</CustomField>