force-app/main/default/objects/Contact/fields/NextBirthday__c.field-meta.xml
<CustomField>
    <fullName>NextBirthday__c</fullName>
    <label>Next Birthday</label>
    <type>Date</type>
</CustomField>