force-app/main/default/objects/Contact/fields/OtherAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>OtherAddressLine2__c</fullName>
    <description>ACHTUNG: Field Label und API Name stimmen nicht überein. Grund sind aufwändige Trigger- und Schnittstellenanpassungen bei API Namenswechsel. lgu 12.11.2014</description>
    <label>Other Name Addition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>