force-app/main/default/objects/Contact/fields/OtherCity__c.field-meta.xml
<CustomField>
    <fullName>OtherCity__c</fullName>
    <label>Other City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>