force-app/main/default/objects/Contact/fields/OtherPoBox__c.field-meta.xml
<CustomField>
    <fullName>OtherPoBox__c</fullName>
    <label>Other PO Box</label>
    <length>80</length>
    <type>Text</type>
</CustomField>