force-app/main/default/objects/Contact/fields/OtherState__c.field-meta.xml
<CustomField>
    <fullName>OtherState__c</fullName>
    <label>Other State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>