force-app/main/default/objects/Contact/fields/OtherStreetNr__c.field-meta.xml
<CustomField>
    <fullName>OtherStreetNr__c</fullName>
    <label>Other Street, Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>