force-app/main/default/objects/Contact/fields/OtherZip__c.field-meta.xml
<CustomField>
    <fullName>OtherZip__c</fullName>
    <label>Other ZIP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>