force-app/main/default/objects/Contact/fields/PersonioPersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonioPersonId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Darin wird die MitarbeiterId aus Personio abgespeichert</description>
    <externalId>true</externalId>
    <label>PersonioPersonId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>