force-app/main/default/objects/Contact/fields/PersonioPersonSyncTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>PersonioPersonSyncTimeStamp__c</fullName>
    <label>PersonioPersonSyncTimeStamp</label>
    <type>DateTime</type>
</CustomField>