force-app/main/default/objects/Contact/fields/ppusername__c.field-meta.xml
<CustomField>
    <fullName>ppusername__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>ppusername</label>
    <length>255</length>
    <type>Text</type>
</CustomField>