force-app/main/default/objects/Contact/fields/PrivateCity__c.field-meta.xml
<CustomField>
    <fullName>PrivateCity__c</fullName>
    <label>Private City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>