force-app/main/default/objects/Contact/fields/PrivateContact__c.field-meta.xml
<CustomField>
    <fullName>PrivateContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Contact</label>
    <type>Checkbox</type>
</CustomField>