force-app/main/default/objects/Contact/fields/PrivateMobile__c.field-meta.xml
<CustomField>
    <fullName>PrivateMobile__c</fullName>
    <label>Private Mobile</label>
    <type>Phone</type>
</CustomField>