force-app/main/default/objects/Contact/fields/PrivateState__c.field-meta.xml
<CustomField>
    <fullName>PrivateState__c</fullName>
    <label>Private State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>