force-app/main/default/objects/Contact/fields/PrivateStreetNr__c.field-meta.xml
<CustomField>
    <fullName>PrivateStreetNr__c</fullName>
    <label>Private Street, Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>