force-app/main/default/objects/Contact/fields/PrivateZip__c.field-meta.xml
<CustomField>
    <fullName>PrivateZip__c</fullName>
    <label>Private ZIP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>