force-app/main/default/objects/Contact/fields/StaffNr__c.field-meta.xml
<CustomField>
    <fullName>StaffNr__c</fullName>
    <externalId>true</externalId>
    <label>Staff Nr.</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>