force-app/main/default/objects/Contact/fields/TimetrackerBestCaseHourCHF__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerBestCaseHourCHF__c</fullName>
    <label>Timetracker - Best Case Hour (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>