force-app/main/default/objects/Contact/fields/TimeTrackerFTEAbsolute__c.field-meta.xml
<CustomField>
    <fullName>TimeTrackerFTEAbsolute__c</fullName>
    <formula>TimetrackerWorkload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Tracker FTE (Absolute)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>