force-app/main/default/objects/Contact/fields/TimetrackerStaffCostsHourCHF__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerStaffCostsHourCHF__c</fullName>
    <label>Timetracker - Staff Costs Hour (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>